--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: Create Pull Request
         run: |
-          changedFiles=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^assets/')
-          commitCount=$(git rev-list --count ${{ github.event.before }}..${{ github.sha }})
+          changedFiles=$(git diff --name-only HEAD^ HEAD | grep '^assets/')
+          commitCount=$(git rev-list --count HEAD^ HEAD)
 
           if [[ $changedFiles -ge 10 || $commitCount -ge 10 ]]; then
             echo "Creating pull request..."
