--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -10,15 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install GitHub CLI
-        uses: actions/setup-gh@v0.6.0
       - name: Create Pull Request
         run: |
-          echo "Current commit SHA: ${GITHUB_SHA}"
-          changedFiles=$(git diff --name-only ${GITHUB_SHA}^ ${GITHUB_SHA} | grep '^assets/')
-          echo "Changed Files: ${changedFiles}"
-          commitCount=$(git rev-list --count ${GITHUB_EVENT_BEFORE}..${GITHUB_SHA})
-          echo "Commits Count: ${commitCount}"
+          changedFiles=$(git diff --name-only HEAD^ HEAD | grep '^assets/')
+          commitCount=$(git rev-list --count HEAD^ HEAD)
 
           if [[ $changedFiles -ge 10 || $commitCount -ge 10 ]]; then
             echo "Creating pull request..."
@@ -28,4 +23,3 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
