--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -1,25 +1,32 @@
 name: Auto Pull Request
-
 on:
   push:
     branches:
       - logos
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: setup git config
+      # Checkout the branch
+      - name: checkout
+        uses: actions/checkout@v2
+
+      - name: Setup git config
         run: |
           # setup the username and email
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - name: Create Pull Request
+
+      - name: Check changed files and commit count
+        #Debug print lol
         run: |
           changedFiles=$(git diff --name-only HEAD^ HEAD | grep '^assets/')
           commitCount=$(git rev-list --count HEAD^ HEAD)
+          echo changedFiles;
+          echo commitCount;
 
+      - name: Create Pull Request
+        run: |
           if [[ $changedFiles -ge 10 || $commitCount -ge 10 ]]; then
             echo "Creating pull request..."
             gh pr create -B app-prealpha -H logos --title "Automated Logos Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
