--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Checkout the branch
-      #- name: checkout
-      #  uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
       - name: Setup git config
         run: |
