--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -7,17 +7,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Checkout the branch
-      - name: checkout
-        uses: actions/checkout
-
-      - name: Setup git config
-        run: |
-          # setup the username and email
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-
-      - name: Check changed files and commit count
+      # Checkout the branch and get info
+      - name: checkout - Check changed files and commit count
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
         #Debug print lol
         run: |
           changedFiles=$(git diff --name-only HEAD^ HEAD | grep '^assets/')
@@ -25,13 +19,32 @@ jobs:
           commitCount=$(git rev-list --count HEAD^ HEAD)
           echo "Commits Count: ${commitCount}"
 
+      #What, why?
+      #- name: Setup git config
+      #  run: |
+          # setup the username and email
+      #    git config user.name "GitHub Actions Bot"
+      #    git config user.email "<>"
+
+      #gh pr create -B app-prealpha -H logos --title "Automated Logos Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
       - name: Create Pull Request
         run: |
           if [[ $changedFiles -ge 10 || $commitCount -ge 10 ]]; then
             echo "Creating pull request..."
-            gh pr create -B app-prealpha -H logos --title "Automated Logos Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
           else
             echo "Conditions not met. No pull request created."
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      #FIXME: PR's will open regardless if conditions are met or not, just testing regardless if this action works lol
+      - name: Open PR
+        id: open_pr
+        uses: rematocorp/open-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          from-branch: logos
+          to-branch: app-prealpha
+          repository-owner: Centinela-RR
+          repository: Custodes
+          
+      - name: Echo mergeable PR number
+        run: echo ${{ steps.open_pr.outputs.pull_number }}
