--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -20,6 +20,8 @@ jobs:
           echo "Changed Files: ${changedFiles}"
           commitCount=$(git rev-list --count HEAD^ HEAD)
           echo "Commits Count: ${commitCount}"
+          baseBranch="logos"
+          toMergeToBranch="app-prealpha"
 
       #What, why?
       #- name: Setup git config
@@ -28,25 +30,14 @@ jobs:
       #    git config user.name "GitHub Actions Bot"
       #    git config user.email "<>"
 
-      #gh pr create -B app-prealpha -H logos --title "Automated Logos Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
       - name: Create Pull Request
         run: |
           if [[ $changedFiles -ge 10 || $commitCount -ge 10 ]]; then
             echo "Creating pull request..."
+            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
           else
             echo "Conditions not met. No pull request created."
           fi
-      
-      #FIXME: PR's will open regardless if conditions are met or not, just testing regardless if this action works lol
-      - name: Open PR
-        id: open_pr
-        uses: rematocorp/open-pull-request-action@v1
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          from-branch: logos
-          to-branch: app-prealpha
-          repository-owner: Centinela-RR
-          repository: Custodes
           
       - name: Echo mergeable PR number
         run: echo ${{ steps.open_pr.outputs.pull_number }}
