--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Create Pull Request
         run: |
-          if [[ $changedFiles -ge 10 || $commitCount -ge 10 ]]; then
+          if [[ -n "$changedFiles" && ($changedFiles -ge 10 || $commitCount -ge 10) ]]; then
             echo "Creating pull request..."
             gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
           else
