--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -6,6 +6,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    outputs:
+      id: vars
+      value:
+        changedFiles: ${{ steps.check_changes.outputs.changedFiles }}
+        commitCount: ${{ steps.check_changes.outputs.commitCount }}
+
     steps:
       # Checkout the branch and get info
       - name: checkout - Get access to git repo stuff
@@ -13,22 +20,31 @@ jobs:
         with:
           fetch-depth: 0
 
-      #Debug print lol
+      # As the name implies
       - name: Check changed files and commit count
         run: |
-          set -e  # Enable error handling
           changedFiles=$(git diff --name-only HEAD^ HEAD | grep '^assets/' || echo "No changes in assets folder")
           echo "Changed Files: ${changedFiles}"
           commitCount=$(git rev-list --count HEAD^ HEAD)
           echo "Commits Count: ${commitCount}"
-          baseBranch="logos"
-          toMergeToBranch="app-prealpha"
 
+        # Set outputs to be used in the next steps
+        env:
+          changedFiles: ${{ changedFiles }}
+          commitCount: ${{ commitCount }}
+        shell: bash
+
+  create_pr:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
       - name: Create Pull Request
         run: |
-          if [[ "$changedFiles" == "No changes in assets folder" || $(echo "$changedFiles" | wc -l) -ge 10 || $commitCount -ge 10 ]]; then
+          baseBranch="logos"
+          toMergeToBranch="app-prealpha"
+          if [[ "${{ needs.build.outputs.changedFiles }}" == "No changes in assets folder" || $(echo "${{ needs.build.outputs.changedFiles }}" | wc -l) -ge 10 || ${{ needs.build.outputs.commitCount }} -ge 10 ]]; then
             echo "Creating pull request..."
-            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n$changedFiles\n\nCommits Count: $commitCount"
+            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${{ needs.build.outputs.changedFiles }}\n\nCommits Count: ${{ needs.build.outputs.commitCount }}"
           else
             echo "Conditions not met. No pull request created."
           fi
