--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -36,9 +36,10 @@ jobs:
         run: |
           baseBranch="logos"
           toMergeToBranch="app-prealpha"
-          if [[ "${{ needs.build.outputs.CHANGED_FILES }}" == "No changes in assets folder" || $(echo "${{ needs.build.outputs.CHANGED_FILES }}" | wc -l) -ge 10 || ${{ needs.build.outputs.COMMIT_COUNT }} -ge 10 ]]; then
+          if [[ "${{ needs.build.outputs.CHANGED_FILES }}" == "No changes in assets folder" || ${{ needs.build.outputs.COMMIT_COUNT }} -ge 10 ]]; then
             echo "Creating pull request..."
             gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${{ needs.build.outputs.CHANGED_FILES }}\n\nCommits Count: ${{ needs.build.outputs.COMMIT_COUNT }}"
           else
             echo "Conditions not met. No pull request created."
           fi
+
