--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -36,10 +36,14 @@ jobs:
         run: |
           baseBranch="logos"
           toMergeToBranch="app-prealpha"
-          if [[ "${{ needs.build.outputs.CHANGED_FILES }}" == "No changes in assets folder" || ${{ needs.build.outputs.COMMIT_COUNT }} -ge 10 ]]; then
+          if [[ "${{ needs.build.outputs.CHANGED_FILES }}" == "No changes in assets folder" || -z "${{ needs.build.outputs.COMMIT_COUNT }}" ]]; then
+            echo "Either CHANGED_FILES is 'No changes in assets folder' or COMMIT_COUNT is empty."
+          elif [[ ${{ needs.build.outputs.COMMIT_COUNT }} -ge 10 ]]; then
+            echo "COMMIT_COUNT is greater than or equal to 10."
             echo "Creating pull request..."
             gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${{ needs.build.outputs.CHANGED_FILES }}\n\nCommits Count: ${{ needs.build.outputs.COMMIT_COUNT }}"
           else
             echo "Conditions not met. No pull request created."
           fi
+
 
