--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -25,7 +25,10 @@ jobs:
           echo "Commits Count: ${COMMIT_COUNT}"
 
       - name: Set outputs
-        run: echo "changedFiles=${{ env.CHANGED_FILES }}\ncommitCount=${{ env.COMMIT_COUNT }}" >> $GITHUB_ENV
+        run: |
+          echo "changedFiles=${{ steps.check_changes.outputs.CHANGED_FILES }}" >> $GITHUB_ENV
+          echo "commitCount=${{ steps.check_changes.outputs.COMMIT_COUNT }}" >> $GITHUB_ENV
+
 
   create_pr:
     needs: build
@@ -36,12 +39,12 @@ jobs:
         run: |
           baseBranch="logos"
           toMergeToBranch="app-prealpha"
-          if [[ "${{ needs.build.outputs.CHANGED_FILES }}" == "No changes in assets folder" || -z "${{ needs.build.outputs.COMMIT_COUNT }}" ]]; then
+          if [[ "${{ env.changedFiles }}" == "No changes in assets folder" || -z "${{ env.commitCount }}" ]]; then
             echo "Either CHANGED_FILES is 'No changes in assets folder' or COMMIT_COUNT is empty."
-          elif [[ ${{ needs.build.outputs.COMMIT_COUNT }} -ge 10 ]]; then
+          elif [[ "${{ env.commitCount }}" -ge 10 ]]; then
             echo "COMMIT_COUNT is greater than or equal to 10."
             echo "Creating pull request..."
-            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${{ needs.build.outputs.CHANGED_FILES }}\n\nCommits Count: ${{ needs.build.outputs.COMMIT_COUNT }}"
+            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${{ env.changedFiles }}\n\nCommits Count: ${{ env.commitCount }}"
           else
             echo "Conditions not met. No pull request created."
           fi
