--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -28,7 +28,7 @@ jobs:
           echo "changedFiles=${CHANGED_FILES}" >> $GITHUB_ENV
           echo "commitCount=${COMMIT_COUNT}" >> $GITHUB_ENV
           # cuz yea?
-          echo $GITHUB_ENV
+          env
 
   create_pr:
     needs: build
@@ -37,7 +37,7 @@ jobs:
     steps:
       - name: Create Pull Request
         run: |
-          echo $GITHUB_ENV
+          env
           baseBranch="logos"
           toMergeToBranch="app-prealpha"
           if [[ "${{ env.changedFiles }}" == "No changes in assets folder" || -z "${{ env.commitCount }}" ]]; then
