--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -27,8 +27,6 @@ jobs:
           # Set outputs
           echo "changedFiles=${CHANGED_FILES}" >> $GITHUB_ENV
           echo "commitCount=${COMMIT_COUNT}" >> $GITHUB_ENV
-          # cuz yea?
-          env
 
   create_pr:
     needs: build
@@ -37,7 +35,9 @@ jobs:
     steps:
       - name: Create Pull Request
         run: |
-          env
+          echo "Environment Variables:"
+          echo "CHANGED_FILES: ${CHANGED_FILES}"
+          echo "COMMIT_COUNT: ${COMMIT_COUNT}"
           baseBranch="logos"
           toMergeToBranch="app-prealpha"
           if [[ "${{ needs.build.outputs.CHANGED_FILES }}" == "No changes in assets folder" || -z "${{ needs.build.outputs.COMMIT_COUNT }}" ]]; then
