--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -30,7 +30,7 @@ jobs:
 
   create_pr:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - name: Create Pull Request
         run: |
