GH Actions: where workspace?

--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -25,6 +25,7 @@ jobs:
           echo "Commits Count: ${COMMIT_COUNT}"
 
           # Set outputs
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
           echo "${CHANGED_FILES}" >> $GITHUB_WORKSPACE/envFile1.txt
           echo "${COMMIT_COUNT}" >> $GITHUB_WORKSPACE/envFile2.txt
 
@@ -35,6 +36,7 @@ jobs:
       - name: Create Pull Request
         run: |
           echo "Environment Variables:"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
           CHANGED_FILES=$(cat $GITHUB_WORKSPACE/envFile1.txt)
           COMMIT_COUNT=$(cat $GITHUB_WORKSPACE/envFile2.txt)
           echo "CHANGED_FILES: ${CHANGED_FILES}"
