--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -25,7 +25,6 @@ jobs:
           echo "Commits Count: ${COMMIT_COUNT}"
 
           # Set outputs
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
           echo "${CHANGED_FILES}" >> $GITHUB_WORKSPACE/envFile1.txt
           echo "${COMMIT_COUNT}" >> $GITHUB_WORKSPACE/envFile2.txt
 
@@ -33,10 +32,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    #Fr?
+      - name: Checkout again
+        uses: actions/checkout@v4
+        with:
+          # Fetch the entire history again
+          fetch-depth: 0
       - name: Create Pull Request
         run: |
           echo "Environment Variables:"
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
           CHANGED_FILES=$(cat $GITHUB_WORKSPACE/envFile1.txt)
           COMMIT_COUNT=$(cat $GITHUB_WORKSPACE/envFile2.txt)
           echo "CHANGED_FILES: ${CHANGED_FILES}"
