--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    if: github.event_name == 'push' && github.event.head_commit.message !~ /^Merge pull request/
+
     steps:
       - name: Checkout - Get access to git repo stuff
         uses: actions/checkout@v4
@@ -37,6 +39,9 @@ jobs:
   create_pr:
     runs-on: ubuntu-latest
     needs: build
+    
+    if: github.event_name == 'push' && github.event.head_commit.message !~ /^Merge pull request/
+
     steps:
       - name: Checkout - Get access to git repo stuff
         uses: actions/checkout@v4
