--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    if: github.event_name == 'push' && github.event.head_commit.message !~ /^Merge pull request/
+    if: github.event_name == 'push' && github.event.head_commit.message != /^Merge pull request/
 
     steps:
       - name: Checkout - Get access to git repo stuff
@@ -39,8 +39,8 @@ jobs:
   create_pr:
     runs-on: ubuntu-latest
     needs: build
-    
-    if: github.event_name == 'push' && github.event.head_commit.message !~ /^Merge pull request/
+
+    if: github.event_name == 'push' && github.event.head_commit.message != /^Merge pull request/
 
     steps:
       - name: Checkout - Get access to git repo stuff
@@ -68,10 +68,10 @@ jobs:
           
           if [[ "${CHANGED_FILES}" == "No changes in assets folder" && "${COMMIT_COUNT}" -ge 10 ]]; then
             echo -e "$successMsg"
-            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${CHANGED_FILES}\n\nCommits Count: ${COMMIT_COUNT}"
+            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files: ${CHANGED_FILES}, Commits Count: ${COMMIT_COUNT}"
           elif [[ "${CHANGED_FILES}" != "No changes in assets folder" && ("${CHANGED_FILES}" -ge 10 || "${COMMIT_COUNT}" -ge 10) ]]; then
             echo -e "$successMsg"
-            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files:\n${CHANGED_FILES}\n\nCommits Count: ${COMMIT_COUNT}"
+            gh pr create -B $toMergeToBranch -H $baseBranch --title "Automated ${baseBranch} Pull Request" --body "Changed Files: ${CHANGED_FILES}, Commits Count: ${COMMIT_COUNT}"
           else
               echo "Conditions not met. No pull request created."
           fi
