--- a/.github/workflows/pull-request-logos.yml
+++ b/.github/workflows/pull-request-logos.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    if: github.event_name == 'push' && github.event.head_commit.message != /^Merge pull request/
+    if: github.event_name == 'push' && contains(github.event.head_commit.message, 'Merge pull request') == false
 
     steps:
       - name: Checkout - Get access to git repo stuff
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
-    if: github.event_name == 'push' && github.event.head_commit.message != /^Merge pull request/
+    if: github.event_name == 'push' && contains(github.event.head_commit.message, 'Merge pull request') == false
 
     steps:
       - name: Checkout - Get access to git repo stuff
