--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Add the dependency for the Google services Gradle plugin
+        id 'com.google.gms.google-services' version '4.4.0' apply false
     }
 }
 
