--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   uuid: ^4.3.3
   shared_preferences: ^2.2.2
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
