--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   uuid: ^4.3.3
   shared_preferences: ^2.2.2
   device_info_plus: ^9.1.1
+  permission_handler_platform_interface: ^4.1.0
 
 dev_dependencies:
   flutter_test:
