--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // Add the dependency for the Google services Gradle plugin - wtf why it crash it all? Fuck firebase tutorials frfr
         // id 'com.google.gms.google-services' version '4.4.0' apply false
+        classpath 'com.android.tools.build:gradle:7.1.3'
     }
 }
 
