--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.2.2
   device_info_plus: ^9.1.1
   permission_handler_platform_interface: ^4.1.0
+  baseflow_plugin_template: ^2.1.1
+  permission_handler: ^11.2.0
 
 dev_dependencies:
   flutter_test:
