--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   baseflow_plugin_template: ^2.1.1
   permission_handler: ^11.2.0
   flutter_launcher_icons: ^0.13.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
