--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,17 +44,26 @@ dependencies:
   permission_handler_platform_interface: ^4.1.0
   baseflow_plugin_template: ^2.1.1
   permission_handler: ^11.2.0
+  another_flutter_splash_screen: ^1.2.0
+  page_transition: ^2.1.0
+  flutter_native_splash: ^2.3.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
+
+
+flutter_native_splash:
+color: "#42a5f5"
+
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
