--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.17.3
   cloud_firestore: ^4.15.3
+  # shared_preferences guarda un indicador en el almacenamiento local
   shared_preferences: ^2.2.2
   
   # Splashscreen - easy to implement
