--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,15 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "Make IPA",
+      "label": "Build IPA",
       "type": "shell",
-      "command": "rm -rdf build/ios/archive/Runner.xcarchive && flutter build ipa && cd build/ios/archive/Runner.xcarchive/Products && mv Applications Payload && zip -r ../../../../Releases/Custodes.ipa Payload/ && cd ../../ && rm -rd Runner.xcarchive",
+      "command": "mkdir -p Releases && rm -rdf build/ios/archive/Runner.xcarchive && flutter build ipa && cd build/ios/archive/Runner.xcarchive/Products && mv Applications Payload && zip -r ../../../../../Releases/Custodes.ipa Payload/ && cd ../../ && rm -rd Runner.xcarchive",
+      "group": "build"
+    },
+    {
+      "label": "Build APK",
+      "type": "shell",
+      "command": "mkdir -p Releases && flutter build apk && mv build/app/outputs/flutter-apk/app-release.apk Releases/Custodes.apk",
       "group": "build"
     },
     {
@@ -14,6 +20,6 @@
       "type": "shell",
       "command": "java -jar bfg.jar --replace-text ../sensitiveData.txt && git reflog expire --expire=now --all && git gc --prune=now --aggressive && git push --force",
       "group": "build"
-    }
+    },
   ]
 }
