--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   firebase_auth: ^4.17.3
   cloud_firestore: ^4.15.3
 
+  # Feedback: We should use this somehow
+  # feedback: ^3.0.0
+
   # shared_preferences: Almacenamiento local de preferencias en el dispositivo
   shared_preferences: ^2.2.2
   
