--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,7 +31,7 @@
 					<string>Editor</string>
 					<key>CFBundleURLSchemes</key>
 					<array>
-							<string>app-1-***REMOVED***-ios-***REMOVED***</string>
+							<string>app-1-528581573998-ios-e85e72c830391c4b00157f</string>
 					</array>
 			</dict>
 	</array>
