--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
         mavenCentral()
@@ -8,7 +8,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // Add the dependency for the Google services Gradle plugin - wtf why it crash it all? Fuck firebase tutorials frfr
-        // id 'com.google.gms.google-services' version '4.4.0' apply false
+        classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.android.tools.build:gradle:8.2.2'
     }
 }
