--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,6 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // Add the dependency for the Google services Gradle plugin - wtf why it crash it all? Fuck firebase tutorials frfr
         classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.android.tools.build:gradle:8.2.2'
     }
@@ -31,3 +30,8 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+/*plugins {
+  // Add the dependency for the Google services Gradle plugin
+  id 'com.google.gms.google-services' version '4.4.1' apply false
+}*/
