--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.1
+  flutter_dotenv: ^5.1.0 
 
 
 # The following section is specific to Flutter packages.
@@ -71,7 +72,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/icons/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
